--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-async-handler": "^1.2.0",
     "express-validator": "^6.14.2",
+    "generate-unique-id": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.7.0",
     "nodemon": "^2.0.20",
