--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-validator": "^6.14.2",
     "generate-unique-id": "^2.0.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.29.4",
     "mongoose": "^6.7.0",
     "nodemon": "^2.0.20",
     "uuid": "^9.0.0"
